changed register and login response body
